--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-flask==2.3.3
-flask-cors==4.0.0
-numpy==1.26.4
+Flask==2.3.3
+Flask-Cors==4.0.0
+gunicorn==20.1.0
+numpy==1.23.5
+soundfile
+openai-whisper
+torch==2.0.1
+python-dotenv==1.0.0
+python-multipart
+textstat==0.7.3
 scikit-learn==1.3.2
 nltk==3.8.1
-textstat==0.7.3
-python-dotenv==1.0.0
-gunicorn==20.1.0
-whisper
-pydub
-spacy
-python-multipart
-torch 
